fix cart item overflowing on small screens

--- a/src/styles/cart.css
+++ b/src/styles/cart.css
@@ -38,7 +38,8 @@
 }
 
 .cart-item .right-wrapper {
-  gap: 4em;
+  width: min(400px, 100%);
+  justify-content: space-between;
 }
 
 .cart-item .left-wrapper {
